FastApi/Deployment/ingressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: blkhost-lb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: nginx-stable/nginx-ingress
