FastApi/Deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fastapi
  labels:
    k8s-app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: fastapi
  template:
    metadata:
      labels:
        k8s-app: fastapi
    spec:
      # volumes:
        # - name: fastapi-certs
          # secret:
            # secretName: fastapi-certs
            # defaultMode: 420
        # - name: tmp-volume
          # emptyDir: {}
      containers:
        - name: fastapi
          image: 'pkvcr.azurecr.io/fastapi:dev'
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
          # volumeMounts:
            # - name: fastapi-certs
              # mountPath: /certs
            # - name: tmp-volume
              # mountPath: /tmp
