FastApi/Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: fastapi-svc
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: fastapi
