FastApi/Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  ingressClassName: blkhost-lb
  rules:
  - host: 1persondev.com
    http:
      paths:
      - path: /fast
        pathType: Prefix
        backend:
          service:
            name: fastapi-svc
            port:
              number: 80
